search and grid alignment

--- a/photo_gallery_v5/css/styles.css
+++ b/photo_gallery_v5/css/styles.css
@@ -3,13 +3,16 @@
 }
 
 input {
-    border-radius: 5px;
-    min-height: 50px;
+    display: block;
+    height: 50px;
+    border-radius: 7px;
     width: 50%;
     max-width: 500px;
     border: 2px solid #ddd;
     margin-top: 25px;
     margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 ::placeholder {
@@ -18,7 +21,7 @@ input {
 
 .gallery {
     margin: auto;
-    max-width: 1000px;
+    max-width: 860px;
     display: grid;
     grid-template-columns: repeat(4, 200px);
     grid-template-rows: repeat(3, 200px);
